More detail in README, slightly more information in resume.tex

--- a/README
+++ b/README
@@ -1,4 +1,13 @@
+REQUIREMENTS:
+
+Arch Linux:
+texlive-core
+texlive-latexextra
+
+NOTES:
+
 This is a simple LaTeX document to produce my resume.
 
 Hopefully I'll be able to make it more programatic in the future such that it will require minimal editing of any kind to customize for any individual user.
+
 
