Changed 'advanced' to 'intermediate'

--- a/resume.tex
+++ b/resume.tex
@@ -55,9 +55,9 @@
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item In-depth knowledge of \textbf{C/C++, Bash, Perl, C\#, Java,} and \textbf{\rmfamily \LaTeX}
+\item Intermediate knowledge of \textbf{C/C++, Bash, Perl, C\#, Java,} and \textbf{\rmfamily \LaTeX}
 \item Experience in \textbf{Python, JS, PHP, Visual Basic, MySQL/MariaDB interfaces}
-\item Experience with development in \textbf{Microsoft Visual Studio, Eclipse IDEs}
+\item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
 \item Some experience in \textbf{Android development}
 \item Experience in libraries including \textbf{SDL/2, POSIX, OpenAL Soft}
