Moved LaTeX from Languages line

--- a/resume.tex
+++ b/resume.tex
@@ -55,8 +55,8 @@
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Intermediate knowledge of \textbf{C/C++, Bash, Perl, C\#, Java,} and \textbf{\rmfamily \LaTeX}
-\item Experience in \textbf{Python, JS, PHP, Visual Basic, MySQL/MariaDB interfaces}
+\item Intermediate knowledge of \textbf{C/C++, Bash, Perl, C\#,} and \textbf{Java}
+\item Experience in \textbf{Python, JS, PHP, Visual Basic, MySQL/MariaDB interfaces,} and \textbf{\rmfamily \LaTeX}
 \item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
 \item Some experience in \textbf{Android development}
