--- a/resume.tex
+++ b/resume.tex
@@ -55,9 +55,10 @@
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Intermediate knowledge of \textbf{C/C++, Bash, Perl, C\#,} and \textbf{Java}
+\item Strong knowledge of \textbf{C/C++, Bash, Perl, C\#,} and \textbf{Java}
 \item Experience in \textbf{Python, JS, PHP, Visual Basic, MySQL interfaces,} and \textbf{\rmfamily \LaTeX}
 \item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
+\item Developed a custom \textbf{distributed server} for devices connecting via a custom protocol
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
 \item Some experience in \textbf{Android development}
 \item Experience in libraries including \textbf{SDL/2, POSIX, OpenAL Soft}
@@ -66,7 +67,7 @@
 & \textbf{System Administration} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Administration of \textbf{Nginx, Apache} and other servers software
-\item Years of experience with various distributions of \textbf{Linux (especially Arch Linux)}
+\item Years of experience with various distributions of \textbf{Linux} (especially Arch Linux)
 \item Experienced in task automation via \textbf{Bash, Perl} and \textbf{Python} scripts
 \end{itemize} } } \\
 & \textbf{Embedded Systems} & \\
@@ -77,13 +78,13 @@
 \\
 { \large \textbf{Projects:} } & \textbf{Virtual Reality} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, some early Oculus Rift tech)
-\item Wrote scripts for GlovePIE (Glove programmable input emulator) to take input from virtual reality headgear and emulate a mouse device
+\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
+\item Currently managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux
 \end{itemize} } } \\
 & \textbf{Open Source Community} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Ongoing packaging of software for the ArchLinux distribution, including VRUI development kit, Octoprint 3d printer remote software, and others as well as contributed to the various articles of the ArchLinux Wiki, especially in resolving installation issues and performance optimizations
-\item Knowledge of image manipulation, including common issues in image scaling and image resampling algorithms
+\item Ongoing packaging of software for the ArchLinux distribution, including VRUI development kit, Dolphin VR, oculus-wine-wrapper and others as well as contributed to the various articles of the ArchLinux Wiki, especially in resolving installation issues and performance optimizations
+\item Active Github user, with numerous contributions (mostly related to crossplatform work)
 \end{itemize} } } \\
 & \textbf{3D Printing} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
