--- a/resume.tex
+++ b/resume.tex
@@ -1,3 +1,8 @@
+\newcommand{\myname}{Zachary Jaggi}
+\newcommand{\phone}{469-443-8325}
+\newcommand{\email}{zxj110030@utdallas.edu}
+\newcommand{\myaddress}{1700 Savage Drive, Plano, Texas 75023}
+
 \documentclass{letter}
 \pagestyle{empty}
 \usepackage[margin=0.45in]{geometry}
@@ -37,9 +42,9 @@
 
 % Title and address/info
 \begin{center}
-{ \Large \textbf{ZACHARY JAGGI} }
+{ \Large \textbf{\MakeUppercase\myname} }
 
-1700 Savage Drive, Plano, Texas 75023\\469-443-8325 // zxj110030@utdallas.edu \\[14pt]
+{\myaddress}\\ {\phone} // {\email} \\[14pt]
 % Meat of the document.
 \begin{tabulary}{\textwidth}{llr}
 { \large \textbf{Education:} } & \textbf{University of Texas at Dallas, Richardson, TX} & \textbf{August 2013 - Present} \\
