Corrected some mistakes, added newer projects from latest internship.

--- a/resume.tex
+++ b/resume.tex
@@ -60,12 +60,15 @@
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Strong knowledge of \textbf{C/C++, Bash, Perl, C\#,} and \textbf{Java}
-\item Experience in \textbf{Python, JS, PHP, Visual Basic, MySQL interfaces,} and \textbf{\rmfamily \LaTeX}
+\item Strong knowledge of \textbf{C/C++11, Python, C\#,} and \textbf{Java}
+\item Experience in \textbf{Perl, JavaScript, PHP, Visual Basic, MySQL interfaces,} and \textbf{\rmfamily \LaTeX}
 \item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
 \item Developed a custom \textbf{distributed server} for devices connecting via a custom protocol
+\item Designed an open-source \textbf{API} to abstract away a legacy protocol
+\item Wrapped the above API using \textbf{SWIG}, for use in Android, iOS, Windows
+\item Designed a \textbf{hardware-independent} embedded firmware in C++
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
-\item Some experience in \textbf{Android development}
+\item Experience in \textbf{Android development}
 \item Experience in libraries including \textbf{SDL/2, POSIX, OpenAL Soft}
 \item Worked with \textbf{Git} and \textbf{SVN} source tracking 
 \end{itemize} } } \\
@@ -84,12 +87,12 @@
 { \large \textbf{Projects:} } & \textbf{Virtual Reality} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
-\item Currently managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux
+\item Managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux, and assisting with the new official support via OSVR
 \end{itemize} } } \\
 & \textbf{Open Source Community} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Ongoing packaging of software for the ArchLinux distribution, including VRUI development kit, Dolphin VR, oculus-wine-wrapper and others as well as contributed to the various articles of the ArchLinux Wiki, especially in resolving installation issues and performance optimizations
-\item Active Github user, with numerous contributions (mostly related to crossplatform work)
+\item Ongoing packaging of software for the ArchLinux distribution, including VRUI development kit, Dolphin VR, oculus-wine-wrapper and others as well as contributed to the various articles of the ArchLinux Wiki
+\item Active Github user, with numerous contributions (often related to crossplatform work)
 \end{itemize} } } \\
 & \textbf{3D Printing} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
