Moved API/Embedded stuff up from 'skils'

--- a/resume.tex
+++ b/resume.tex
@@ -54,8 +54,11 @@
 \\
 { \large \textbf{Employment:} } & \textbf{Elk Products, Hickory, NC}  (Software Engineering Intern) & \textbf{May 2013 - Present} \\
  & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Rewrote several server softwares from the ground up to be streamlined, greatly reducing latency and significantly reducing memory and CPU footprint
-\item Corrected issues in UI of consumer remote control software, reducing problematic page loading time from seconds to milliseconds, as well as improving debug output
+\item Completely rewrote several server softwares from the ground up to be streamlined, greatly reducing latency and significantly reducing memory and CPU footprint
+\item Developed a custom distributed server for devices connecting via a custom protocol
+\item Designed an open-source C++11 API and library to abstract away a legacy protocol
+\item Wrapped the above API using SWIG, for automated use in Android, iOS, Windows
+\item Designed a hardware-independent embedded firmware in C++11
 \end{itemize} } } \\
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
@@ -63,14 +66,10 @@
 \item Strong knowledge of \textbf{C/C++11, Python, C\#,} and \textbf{Java}
 \item Experience in \textbf{Perl, JavaScript, PHP, Visual Basic, MySQL interfaces,} and \textbf{\rmfamily \LaTeX}
 \item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
-\item Developed a custom \textbf{distributed server} for devices connecting via a custom protocol
-\item Designed an open-source \textbf{API} to abstract away a legacy protocol
-\item Wrapped the above API using \textbf{SWIG}, for use in Android, iOS, Windows
-\item Designed a \textbf{hardware-independent} embedded firmware in C++
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
-\item Experience in \textbf{Android development}
+\item Experience in \textbf{Android development}, and creating \textbf{cross-platform libraries} with \textbf{SWIG}
 \item Experience in libraries including \textbf{SDL/2, POSIX, OpenAL Soft}
-\item Worked with \textbf{Git} and \textbf{SVN} source tracking 
+\item In-depth experience with \textbf{Git} and \textbf{SVN} source tracking 
 \end{itemize} } } \\
 & \textbf{System Administration} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
@@ -80,8 +79,8 @@
 \end{itemize} } } \\
 & \textbf{Embedded Systems} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Experienced in programming for \textbf{embedded systems}
-\item AVR/ARM Microcontrollers: \textbf{ATMega} and \textbf{ATTiny series}
+\item Experienced in programming \textbf{high-level code} for \textbf{embedded systems}
+\item AVR/ARM Microcontrollers: \textbf{ATMega} and \textbf{ATTiny series}, and several \textbf{Freescale} processors
 \end{itemize} } } \\
 \\
 { \large \textbf{Projects:} } & \textbf{Virtual Reality} & \\
