Updated for May 2016

--- a/resume.tex
+++ b/resume.tex
@@ -5,6 +5,8 @@
 
 \documentclass{letter}
 \pagestyle{empty}
+\usepackage{textcomp}
+
 \usepackage[margin=0.45in]{geometry}
 
 % Comment the following line to deny the usage of umlauts and other non-ASCII characters
@@ -54,7 +56,7 @@
 \\
 { \large \textbf{Employment:} } & \textbf{Elk Products, Hickory, NC}  (Software Engineering Intern) & \textbf{May 2013 - Present} \\
  & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Completely rewrote several server softwares from the ground up to be streamlined, greatly reducing latency and significantly reducing memory and CPU footprint
+\item Rewrote several server softwares from the ground up to be streamlined, greatly reducing latency and significantly reducing memory and CPU footprint
 \item Developed a custom distributed server for devices connecting via a custom protocol
 \item Designed an open-source C++11 API and library to abstract away a legacy protocol
 \item Wrapped the above API using SWIG, for automated use in Android, iOS, Windows
@@ -63,24 +65,24 @@
 \\
 { \large \textbf{Skills:} } & \textbf{Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Strong knowledge of \textbf{C/C++11, Python, C\#,} and \textbf{Java}
-\item Experience in \textbf{Perl, JavaScript, PHP, Visual Basic, MySQL interfaces,} and \textbf{\rmfamily \LaTeX}
+\item Strong knowledge of \textbf{C++11, Python, C\#, JavaScript} and \textbf{Java}
+\item Experienced in \textbf{C99, Perl, PHP, Visual Basic,} and \textbf{NodeJS}
 \item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
 \item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
-\item Experience in \textbf{Android development}, and creating \textbf{cross-platform libraries} with \textbf{SWIG}
-\item Experience in libraries including \textbf{SDL/2, POSIX, OpenAL Soft}
-\item In-depth experience with \textbf{Git} and \textbf{SVN} source tracking 
-\end{itemize} } } \\
-& \textbf{System Administration} & \\
-& \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Administration of \textbf{Nginx, Apache} and other servers software
-\item Years of experience with various distributions of \textbf{Linux} (especially Arch Linux)
-\item Experienced in task automation via \textbf{Bash, Perl} and \textbf{Python} scripts
+\item Experienced in \textbf{Android development}, and creating \textbf{cross-platform libraries} with \textbf{SWIG}
+\item In-depth experience with \textbf{Git} and \textbf{SVN} version control systems
+\item Experienced in several \textbf{machine learning} toolkits, expecially python-nolearn and AML
+\item Very experienced in creating \textbf{networked applications}, including \textbf{distributed servers} and clients
+\item Some experience in writing \textbf{compilers and interpreters} for custom languages
+\item Prior use of \textbf{profiling tools} to optimize hot-paths in expensive applications
+\item Experience in \textbf{threaded applications} and resolving \textbf{parallelism issues}
+\item Comfortable developing on/for \textbf{Windows, Linux, Android} and other platforms
 \end{itemize} } } \\
 & \textbf{Embedded Systems} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Experienced in programming \textbf{high-level code} for \textbf{embedded systems}
+\item Experienced in programming \textbf{high-level, hardware independent code} for \textbf{embedded systems}
 \item AVR/ARM Microcontrollers: \textbf{ATMega} and \textbf{ATTiny series}, and several \textbf{Freescale} processors
+\item Resolving issues in provided \textmu OS to support \textbf{high level C++11 firmware}
 \end{itemize} } } \\
 \\
 { \large \textbf{Projects:} } & \textbf{Virtual Reality} & \\
@@ -90,8 +92,9 @@
 \end{itemize} } } \\
 & \textbf{Open Source Community} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Ongoing packaging of software for the ArchLinux distribution, including VRUI development kit, Dolphin VR, oculus-wine-wrapper and others as well as contributed to the various articles of the ArchLinux Wiki
-\item Active Github user, with numerous contributions (often related to crossplatform work)
+\item Ongoing development of VR software for Linux, including VRUI, OSVR, and numerous others
+\item Active Github user, with numerous contributions (often related to ensuring applications work equally on Windows, Linux and OSX)
+\item Resolving bugs tracked in GitHub's issue tracker, creating and merging pull requests, and resolving potential issues with PRs via realtime feedback
 \end{itemize} } } \\
 & \textbf{3D Printing} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
