--- a/resume.tex
+++ b/resume.tex
@@ -50,7 +50,7 @@
 % Meat of the document.
 \begin{tabulary}{\textwidth}{llr}
 { \large \textbf{Education:} } & \textbf{University of Texas at Dallas, Richardson, TX} & \textbf{August 2013 - May 2016} \\
-& Candidate for Bachelor of Science in Computer Science \\[7pt]
+& Bachelor of Science in Computer Science \\[7pt]
 & \textbf{Collin College, Plano, TX} & \textbf{August 2011 - May 2013} \\
  & Associates of Sciences \\
 \\
