Add a link to my github. Fairly important!

--- a/resume.tex
+++ b/resume.tex
@@ -2,6 +2,7 @@
 \newcommand{\phone}{469-443-8325}
 \newcommand{\email}{zxj110030@utdallas.edu}
 \newcommand{\myaddress}{1700 Savage Drive, Plano, Texas 75023}
+\newcommand{\mysite}{https://github.com/feilen}
 
 \documentclass{letter}
 \pagestyle{empty}
@@ -46,7 +47,7 @@
 \begin{center}
 { \Large \textbf{\MakeUppercase\myname} }
 
-{\myaddress}\\ {\phone} // {\email} \\[14pt]
+{\myaddress}\\ {\phone} • {\email}\\ {\mysite} \\[14pt]
 % Meat of the document.
 \begin{tabulary}{\textwidth}{llr}
 { \large \textbf{Education:} } & \textbf{University of Texas at Dallas, Richardson, TX} & \textbf{August 2013 - May 2016} \\
