Name and address

--- a/resume.tex
+++ b/resume.tex
@@ -1,7 +1,7 @@
-\newcommand{\myname}{Zachary Jaggi}
+\newcommand{\myname}{Chelsea Jaggi}
 \newcommand{\phone}{469-443-8325}
 \newcommand{\email}{zxj110030@utdallas.edu}
-\newcommand{\myaddress}{1700 Savage Drive, Plano, Texas 75023}
+\newcommand{\myaddress}{1 St Francis Pl Apt 2902, San Francisco, CA 94107}
 \newcommand{\mysite}{https://github.com/feilen}
 
 \documentclass{letter}
