Plugging my app, people say it's cool

--- a/resume.tex
+++ b/resume.tex
@@ -132,7 +132,7 @@
 \end{itemize} } } \\
 & \textbf{Misc Projects} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Created an Android app for WearOS, which uses a huffman-coded chorded keyboard to allow you to touch-type with muscle memory on only four keys
+\item Created and published an Android app for WearOS (on the Play Store: Chordinated Keyboard), which uses a huffman-coded chorded keyboard to allow you to touch-type with muscle memory on only four keys
 \item Created a calendar bot which scrapes several calendars, formatting them and displaying in a chatroom to encourage San Francisco locals to come to events
 \item Created a bot which signs in as me on a chat program, automatically detecting when someone posts my name or a picture of my face
 \end{itemize} } } \\
