--- a/resume.tex
+++ b/resume.tex
@@ -116,11 +116,13 @@
 \end{itemize} } } \\
 & \textbf{Virtual Reality} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
+\item Helping develop open source API-level methods for VR locomotion, including vestibular motion and redirected walking (on the Steam store: OVR Advanced Settings)
 \item Managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux, and assisting with the new official support via OSVR
+\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
 \end{itemize} } } \\
 & \textbf{Open Source Community} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
+\item Improved the scriptability of MeshLab, allowing for fully automatic point cloud generation/meshing/texturing of 3d scans from video sources
 \item Ongoing development of VR software for Linux, including VRUI, OSVR, and numerous others
 \item Active Github user, with numerous contributions (often related to ensuring applications work equally on Windows, Linux and OSX)
 \item Resolving bugs tracked in GitHub's issue tracker, creating and merging pull requests, and resolving potential issues with PRs via realtime feedback
