November update, try to embed PDF

--- a/resume.tex
+++ b/resume.tex
@@ -116,6 +116,7 @@
 \end{itemize} } } \\
 & \textbf{Virtual Reality} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
+\item Helping develop open-source method for producing optimized variants of any avatar, helping bring the mobile platform in line with the desktop platform via a Blender addon
 \item Helping develop open source API-level methods for VR locomotion, including vestibular motion and redirected walking (on the Steam store: OVR Advanced Settings)
 \item Managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux, and assisting with the new official support via OSVR
 \item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
