--- a/resume.tex
+++ b/resume.tex
@@ -52,7 +52,14 @@
 \begin{tabulary}{\textwidth}{llr}
 \\
 { \large \textbf{Employment:} } & 
-\textbf{Riverbed Technology, SF, CA}  (Software Engineer) & \textbf{October 2016 - Present} \\
+
+\textbf{Cisco Meraki, SF, CA}  (Senior Software Engineer) & \textbf{March 2021 - Present} \\
+ & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
+\item Implemented a monitoring class that captured IOS-XE logs, correctly modelling the underlying state of the architecture based on partial information, then propogating it via Protobuf to the UI
+\item Facilitated cross-team collaboration between four or more teams, allowing a feature to be executed that required a portion of the implementation on multiple different platforms
+\item Managed a number of high-priority bugs on a week-to-week basis, selecting and resolving new tasks over rolling sprints
+\end{itemize} } } \\
+& \textbf{Riverbed Technology, SF, CA}  (Software Engineer) & \textbf{October 2016 - February 2021} \\
  & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Added both virtual and hardware interfaces to the abstraction layer for capturing network traffic, allowing traffic capture on AWS (virtual) and 40/100Gbit fiber (hardware) interfaces
 \item Fine tuned several API functions, letting us export over several hundred time ranges at once instead of opening a socket for each, turning an operation which took minutes into seconds
@@ -71,22 +78,18 @@
 \item Designed a hardware-independent embedded firmware in C++11
 \end{itemize} } } \\
 \\
-{ \large \textbf{Education:} } & \textbf{University of Texas at Dallas, Richardson, TX} & \textbf{August 2013 - May 2016} \\
-& Bachelor of Science in Computer Science \\[7pt]
-& \textbf{Collin College, Plano, TX} & \textbf{August 2011 - May 2013} \\
- & Associates of Sciences \\
 
-\\
-{ \large \textbf{Skills:} } & \textbf{Programming} & \\
+{ \large \textbf{Skills:} } 
+& \textbf{General Programming} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Strong knowledge of \textbf{C++11, Python, C\#, JavaScript} and \textbf{Java}
-\item Experienced in \textbf{C99, Perl, PHP, Visual Basic,} and \textbf{NodeJS}
-\item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
-\item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
+\item Expert knowledge of \textbf{C++17, Python, C\#} and \textbf{Java}
+\item Experienced in \textbf{C99, Perl, PHP, Visual Basic, JavaScript,} and \textbf{NodeJS}
 \item Experienced in \textbf{Android development}, and creating \textbf{cross-platform libraries} with \textbf{SWIG}
-\item In-depth experience with \textbf{Git} and \textbf{SVN} version control systems
 \item Very experienced in creating \textbf{networked applications}, including \textbf{distributed servers} and clients
 \item Some experience in writing \textbf{compilers and interpreters} for custom languages
+\item Experience developing with \textbf{Microsoft Visual Studio, Eclipse IDEs}
+\item Use of \textbf{debugging utilities} (valgrind, GDB, GDB Embedded)
+\item In-depth experience with \textbf{Git} and \textbf{SVN} version control systems
 \item Prior use of \textbf{profiling tools} to optimize hot-paths in expensive applications
 \item Experience in \textbf{threaded applications} and resolving \textbf{parallelism issues}
 \item Comfortable developing on/for \textbf{Windows, Linux, Android} and other platforms
@@ -102,43 +105,60 @@
 \item Experienced in several \textbf{machine learning} toolkits, expecially python-nolearn and AML
 \item Some experience using \textbf{GloVe word embeddings} for \textbf{Natural Language Analysis}
 \item Experience with \textbf{facial recognition} correlation to match users to faces
+\end{itemize} } } \\
+& \textbf{3D/CAD development} & \\
+& \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize}
+\item Strong experience in software-side \textbf{Blender}, facilitating development of several plugins
+\item Experienced in manipulating 3D data both through an interface and \textbf{raw data manipulation}
+\item Moderate experience in \textbf{Unity}, allowing for editor-side scripts to allow \textbf{runtime-generated geometry} and unusual data-packing, as well as consistent application of lighting settings 
 \end{itemize} } } 
 \end{tabulary}
 \end{center}
 \begin{center}
 \begin{tabulary}{\textwidth}{llr}
 \\
-{ \large \textbf{Projects:} } & \textbf{Machine Learning} & \\
+{ \large \textbf{Projects:} }
+& \textbf{Virtual Reality} (cats-blender-plugin, OpenVR-AdvancedSettings, dolphin-vr, and more)& \\
+& \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
+\item Developed an open-source method for instantly producing optimized variants of any avatar by utilizing Blender's own internal rendering engine and a number of data manipulations, bringing production-quality models to the Oculus Quest/Android in a single step (Github: cats-blender-plugin, 'CATS Bake')
+\item Allowed for instant generation of 'twist bones', animation helper bones that prevent models from distorting when twisting
+\item Implemented a method for producing 30+ face-tracking shape keys instantly from traditional visemes, by detecting the upper/lower lips using a heuristic, then manipulating the existing transforms in different directions (VRCFaceTracking-blender-plugin)
+\item Helping develop open source API-level methods for VR locomotion, including vestibular motion and redirected walking (on the Steam store: OVR Advanced Settings)
+\item Managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux, and assisting with the new official support via OSVR
+\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
+\end{itemize} } } \\
+& \textbf{Machine Learning} (morewell, face\_recognition) & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Implemented a natural-language learning bot for a chat program which attempts to detect inflammatory messages via a neural network, forwarding them to an administrator chat
 \item Sourced the above implementation to create a bot for a chat program that signs in as me, automatically learning what messages I'd be most interested in and notifying me when they are posted
 \item Created a facial recognition command-line script that infers which face belongs to which user in a chatroom, automatically exporting VCARD contacts that can then be imported into a phone
 \end{itemize} } } \\
-& \textbf{Virtual Reality} & \\
-& \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Helping develop open-source method for producing optimized variants of any avatar, helping bring the mobile platform in line with the desktop platform via a Blender addon
-\item Helping develop open source API-level methods for VR locomotion, including vestibular motion and redirected walking (on the Steam store: OVR Advanced Settings)
-\item Managing the crossplatform work neccesary to run Dolphin VR (Gamecube emulator) on Linux, and assisting with the new official support via OSVR
-\item Development of interfaces for Virtual Reality technology (Vuzix VR920, Wii, Oculus Rift DK1/DK2)
-\end{itemize} } } \\
-& \textbf{Open Source Community} & \\
+& \textbf{Open Source Community} (meshlab, geometric-weather, todoagenda, KISS) & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Improved the scriptability of MeshLab, allowing for fully automatic point cloud generation/meshing/texturing of 3d scans from video sources
 \item Ongoing development of VR software for Linux, including VRUI, OSVR, and numerous others
-\item Active Github user, with numerous contributions (often related to ensuring applications work equally on Windows, Linux and OSX)
+\item Active Github user, with numerous contributions to a number of well-known open source projects (android apps, blender plugins, desktop applications, and more)
 \item Resolving bugs tracked in GitHub's issue tracker, creating and merging pull requests, and resolving potential issues with PRs via realtime feedback
+\item Helped juggle feedback and issues from a large userbase to resolve ongoing pain points in the application
 \end{itemize} } } \\
 & \textbf{3D Printing} & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Built and continually upgraded a MakerBot Cupcake, a hobbyist CNC 3D printer, including redesign of several individual parts using the OpenSCAD parametric 3D modeler
+\item Developing a number of parametric 3D models using OpenSCAD, as well as more traditionally designed models in Blender
 \item Worked with the embedded C firmware code loaded onto the printer motherboard
 \end{itemize} } } \\
-& \textbf{Misc Projects} & \\
+& \textbf{Misc Projects} (Chordinated Keyboard) & \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
 \item Created and published an Android app for WearOS (on the Play Store: Chordinated Keyboard), which uses a huffman-coded chorded keyboard to allow you to touch-type with muscle memory on only four keys
 \item Created a calendar bot which scrapes several calendars, formatting them and displaying in a chatroom to encourage San Francisco locals to come to events
 \item Created a bot which signs in as me on a chat program, automatically detecting when someone posts my name or a picture of my face
+\item Hosting and managing several small communities, including coordinating regular meetups at different venues
 \end{itemize} } } \\
+\\
+{ \large \textbf{Education:} } & \textbf{University of Texas at Dallas, Richardson, TX} & \textbf{August 2013 - May 2016} \\
+& Bachelor of Science in Computer Science \\[7pt]
+& \textbf{Collin College, Plano, TX} & \textbf{August 2011 - May 2013} \\
+ & Associates of Sciences \\
+\\
 \end{tabulary}
 \end{center}
 \end{document}
