Slight tweak to wording

--- a/resume.tex
+++ b/resume.tex
@@ -120,7 +120,7 @@
 { \large \textbf{Projects:} }
 & \textbf{Virtual Reality} (cats-blender-plugin, OpenVR-AdvancedSettings, dolphin-vr, and more)& \\
 & \multicolumn{2}{c}{\parbox{\middleboxsize}{ \begin{itemize} 
-\item Developed an open-source method for instantly producing optimized variants of any avatar by utilizing Blender's own internal rendering engine and a number of data manipulations, bringing production-quality models to the Oculus Quest/Android in a single step (Github: cats-blender-plugin, 'CATS Bake')
+\item Developed an open-source method for automatically producing optimized variants of any avatar by utilizing Blender's own internal rendering engine and a number of data manipulations, bringing production-quality models to the Oculus Quest/Android in a single step (Github: cats-blender-plugin, 'CATS Bake')
 \item Allowed for instant generation of 'twist bones', animation helper bones that prevent models from distorting when twisting
 \item Implemented a method for producing 30+ face-tracking shape keys instantly from traditional visemes, by detecting the upper/lower lips using a heuristic, then manipulating the existing transforms in different directions (VRCFaceTracking-blender-plugin)
 \item Helping develop open source API-level methods for VR locomotion, including vestibular motion and redirected walking (on the Steam store: OVR Advanced Settings)
